fix: Enhance HomeBanner component with lazy loading and visibility control for improved performance

--- a/src/components/HomeBanner/HomeBanner.module.scss
+++ b/src/components/HomeBanner/HomeBanner.module.scss
@@ -26,3 +26,17 @@
         /* Thay bằng màu nền (hoặc màu bạn muốn) */
     }
 }
+
+.boxImage {
+    transition: opacity 0.3s ease-in-out;
+}
+
+.initiallyHidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.visible {
+    opacity: 1;
+    visibility: visible;
+}
